--- a/css/rechargePay.css
+++ b/css/rechargePay.css
@@ -1,13 +1,9 @@
-/**************************
- ---------首页样式---------
- --------author:linli-------
- ------date:2016-07-06-----
- *************************/
+
 /**头部***/
 #container .header{
 	text-align:center;
-	background-color:#000;
-	color:#fff;
+	background-color:#ffffff;
+	color:#505050;
 	font-size:16px;
 	height:40px;
 	line-height:40px;
@@ -19,7 +15,7 @@
 	position:absolute;
 	left:0px;
 	width:50px;
-	color:#fff;
+	color:#494949;
 }
 #container .header .header-left .icon{
 	font-size:20px;
@@ -97,7 +93,7 @@
 	color:#fff;
 	cursor:pointer;
 	margin:25px 0px;
-	background-color:#a90505;
+	background-color:#ff2d4a;
 }
 #content .recharge-img{
 	width:100%;
