--- a/view/pay.html
+++ b/view/pay.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-cn">
 <head>
-    <title>充值页面</title>
+    <title>我的余额</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no">
@@ -13,7 +13,6 @@
 
     <link rel="stylesheet"  href="../css/iconfont.css">
     <link rel="stylesheet"  href="../css/common.css">
-
     <link rel="stylesheet"  href="../css/bootstrap.min.css">
      <link rel="stylesheet" href="../css/userBase.css">
     <link rel="stylesheet"  href="../css/rechargePay.css">
@@ -27,7 +26,7 @@
                 <a class="header-left" href="javascript:window.history.go(-1);">
                     <i class="icon iconfont">&#xe62a;</i>
                 </a>
-                充值
+                我的余额
             </div>
             <div class="img-area">
                 <img class="recharge-img" src="../image/recharge_top.jpg">
