--- a/css/index.css
+++ b/css/index.css
@@ -91,7 +91,7 @@
 .goods-img{
     width: 100px;
     position: absolute;
-    margin: auto;
+    margin: 10px 0;
     top: 0;
     bottom: 0;
     left: 10px;
